dput-webdav (1.2) noplat; urgency=low

  * Fixed issue with logging password-less credentials

 -- Juergen Hermann <jh@web.de>  Thu, 12 Sep 2013 18:04:58 +0200

dput-webdav (1.1) noplat; urgency=low

  * Get extended configuration in absence of the patch
    (paid for by an ugly hack)
  * Added "simulate" host argument for testing

 -- Juergen Hermann <jh@web.de>  Mon, 09 Sep 2013 12:56:00 +0200

dput-webdav (1.0) noplat; urgency=low

  * Initial release.

 -- Juergen Hermann <jh@web.de>  Wed, 04 Sep 2013 19:05:03 +0200