@@ -1,8 +1,9 @@
 dput-webdav (1.2) noplat; urgency=low
 
   * Fixed issue with logging password-less credentials
+  * Support for PGP signed changes added
 
- -- Juergen Hermann <jh@web.de>  Thu, 12 Sep 2013 18:04:58 +0200
+ -- Juergen Hermann <jh@web.de>  Wed, 25 Sep 2013 16:25:52 +0200
 
 dput-webdav (1.1) noplat; urgency=low
 
